fix the overflow nav menu

--- a/style.css
+++ b/style.css
@@ -397,20 +397,21 @@ form button {
 
 @media only screen and (max-width: 768px) {
   .nav-mobile {
-    display: block;
     display: flex;
     flex-direction: column;
     position: absolute;
     gap: 46px;
     top: 0;
     left: 0;
+    right: 0;
     width: 100%;
+    z-index: 999;
     height: 100vh;
     padding-left: 30px;
     padding-right: 43px;
     padding-top: 24px;
     background-color: #6070ffef;
-    animation: SlideInLeft 1.2s ease-in-out;
+    animation: SlideInLeft 0.5s ease-in-out;
   }
 
   .nav-mobile button {
